objects/ASI_CRM_VN_Contract__c.object
<CustomObject>
    <description>This contract object is only for PRVN</description>
    <fields>
        <fullName>ASI_CRM_AP_Per_Bottle__c</fullName>
        <formula>IF(
	OR(
		ISBLANK(ASI_CRM_Total_Amount__c), 
		ISBLANK(ASI_CRM_Converted_Total_Sales_Target__c),
		ASI_CRM_Total_Amount__c = 0,
		ASI_CRM_Converted_Total_Sales_Target__c= 0
	), 
	0, 
	IF( 
		TEXT(ASI_CRM_Currency__c) = &apos;USD&apos;, 
		ASI_CRM_Total_Amount__c / ASI_CRM_Converted_Total_Sales_Target__c, 
		(ASI_CRM_Total_Amount__c / ASI_CRM_Converted_Total_Sales_Target__c) * ASI_CRM_To_USD_Exchange_Rate__c 
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A&amp;P per Bottle (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Activation_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activation Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Agreement_with_Outlet__c</fullName>
        <label>Agreement with Outlet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Allow_Early_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Early Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Allow_Extend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Extend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Area_Code__c</fullName>
        <label>Area Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Area__c</fullName>
        <formula>TEXT( ASI_CRM_Outlet_WS__r.ASI_CRM_Area__c )</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Balance_Amount__c</fullName>
        <label>Balance Amount</label>
        <summarizedField>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_Cal_Balance_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_VN_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Committed_Amount__c</fullName>
        <label>Committed Amount</label>
        <summarizedField>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_Commit_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_VN_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Number__c</fullName>
        <label>Contract No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed(Terminated)</fullName>
                </value>
                <value>
                    <fullName>Submit for Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Converted_Total_Sales_Target__c</fullName>
        <label>Total Sales Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Extend_Reason__c</fullName>
        <label>Extend Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Extend_Times__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Extend Times</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Key_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Brand</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only can select VN Sub-Brand</errorMessage>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>VN Sub-Brand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Contracts (VN)</relationshipLabel>
        <relationshipName>Contracts_VN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MCF_Type__c</fullName>
        <label>MCF Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_End_Date__c</fullName>
        <label>New End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_Of_Months__c</fullName>
        <formula>IF(NOT(ISBLANK(ASI_CRM_End_Date__c) || ISBLANK(ASI_CRM_Start_Date__c))
,(((YEAR(ASI_CRM_End_Date__c) - YEAR(ASI_CRM_Start_Date__c) - 1) *12) + (12 - MONTH(ASI_CRM_Start_Date__c) +1) + MONTH(ASI_CRM_End_Date__c))
, null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Original_End_Date__c</fullName>
        <label>Original End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Address__c</fullName>
        <formula>ASI_CRM_Outlet_WS__r.ASI_CRM_CN_Address__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Contracted_Brand__c</fullName>
        <formula>TEXT(ASI_CRM_Outlet_WS__r.ASI_CRM_ContractedBrand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Image__c</fullName>
        <formula>TEXT(ASI_CRM_Outlet_WS__r.ASI_CRM_Check_Image__c)</formula>
        <label>Check Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Region__c</fullName>
        <formula>TEXT(ASI_CRM_Outlet_WS__r.ASI_CRM_VN_Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Role__c</fullName>
        <label>Outlet Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type__c</fullName>
        <formula>TEXT(ASI_CRM_Outlet_WS__r.ASI_CRM_VN_OutletType__c)</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_WS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet/WS</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (VN)</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Parent_Outlet__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Contracts (VN)</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PROS_Image__c</fullName>
        <formula>TEXT(ASI_CRM_Outlet_WS__r.ASI_CRM_CN_New_Image__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PROS Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ROI__c</fullName>
        <label>ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Spirit_Volume_Potential__c</fullName>
        <label>Spirit Volume Potential</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Force_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys Force Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts_VN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Termination_Reason__c</fullName>
        <label>Termination Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_To_USD_Exchange_Rate__c</fullName>
        <label>VND to USD Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_To_VND_Exchange_Rate__c</fullName>
        <label>USD to VND Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Amount__c</fullName>
        <label>Total Contract Expenditure</label>
        <summarizedField>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_Total_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_VN_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Capsule_Amount__c</fullName>
        <label>Total Contract Expenditure</label>
        <summarizedField>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_VN_Total_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_VN_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Lump_Sum__c</fullName>
        <label>Total Lump Sum</label>
        <summarizedField>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_VN_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_VN_Item__c</field>
            <operation>equals</operation>
            <value>Lump Sum</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_VN_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Sales_Target_Month__c</fullName>
        <label>Total Sales Target (Per Month)</label>
        <summarizedField>ASI_CRM_VN_Bottle_Analysis__c.ASI_CRM_Target_Per_Month__c</summarizedField>
        <summaryForeignKey>ASI_CRM_VN_Bottle_Analysis__c.ASI_CRM_VN_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Sales_Target__c</fullName>
        <formula>ASI_CRM_No_Of_Months__c * ASI_CRM_Total_Sales_Target_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Remaining_Promotion_Amount__c</fullName>
        <label>Remaining Promotion Amount</label>
        <summarizedField>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_Balance_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_VN_Item__c</field>
            <operation>equals</operation>
            <value>Promotion</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_VN_Contract_Expenditure__c.ASI_CRM_VN_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Valid_Claim_Date__c</fullName>
        <label>Valid Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wine_Volume_Potential__c</fullName>
        <label>Wine Volume Potential</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Contract (VN)</label>
    <listViews>
        <fullName>ASI_CRM_VN_All_Capsule_Agreement</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet_WS__c</columns>
        <columns>ASI_CRM_Contract_Status__c</columns>
        <columns>ASI_CRM_Outlet_Contracted_Brand__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_No_Of_Months__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_VN_Contract__c.ASI_CRM_VN_Capsule_Agreement_Contract</value>
        </filters>
        <label>All Capsule Agreement</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_MCF_Contract</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet_WS__c</columns>
        <columns>ASI_CRM_Contract_Status__c</columns>
        <columns>ASI_CRM_Outlet_Contracted_Brand__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_No_Of_Months__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_VN_Contract__c.ASI_CRM_VN_Contract</value>
        </filters>
        <label>All MCF Contract</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_Approved_Capsule_Agreement</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet_WS__c</columns>
        <columns>ASI_CRM_Contract_Status__c</columns>
        <columns>ASI_CRM_Outlet_Contracted_Brand__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_No_Of_Months__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_VN_Contract__c.ASI_CRM_VN_Capsule_Agreement_Contract</value>
        </filters>
        <filters>
            <field>ASI_CRM_Contract_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Capsule Agreement</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_Contract_Approver</group>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_Approved_MCF_Contract</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet_WS__c</columns>
        <columns>ASI_CRM_Contract_Status__c</columns>
        <columns>ASI_CRM_Outlet_Contracted_Brand__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_No_Of_Months__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_VN_Contract__c.ASI_CRM_VN_Contract</value>
        </filters>
        <filters>
            <field>ASI_CRM_Contract_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved MCF Contract</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_Contract_Approver</group>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Pending_Verification_Capsule</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet_WS__c</columns>
        <columns>ASI_CRM_Contract_Status__c</columns>
        <columns>ASI_CRM_Outlet_Contracted_Brand__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_No_Of_Months__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Contract_Status__c</field>
            <operation>equals</operation>
            <value>Pending Verification</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_VN_Contract__c.ASI_CRM_VN_Capsule_Agreement_Contract</value>
        </filters>
        <label>All Pending Verification Capsule</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_Contract_Approver</group>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Pending_Verification_MCF_Contract</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet_WS__c</columns>
        <columns>ASI_CRM_Contract_Status__c</columns>
        <columns>ASI_CRM_Outlet_Contracted_Brand__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_No_Of_Months__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Contract_Status__c</field>
            <operation>equals</operation>
            <value>Pending Verification</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_VN_Contract__c.ASI_CRM_VN_Contract</value>
        </filters>
        <label>All Pending Verification MCF Contract</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_Contract_Approver</group>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Contract Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts (VN)</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_Capsule_Agreement_Contract</fullName>
        <active>true</active>
        <label>ASI CRM VN Capsule Agreement Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Contract</fullName>
        <active>true</active>
        <label>ASI CRM VN Contract</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_Input_before_approved</fullName>
        <active>true</active>
        <description>User must input the Contract Number and Area Code before setting the contract to Approved</description>
        <errorConditionFormula>(ISBLANK(ASI_CRM_Area_Code__c) ||  ISBLANK(ASI_CRM_Contract_Number__c)) &amp;&amp;   ISPICKVAL(ASI_CRM_Contract_Status__c, &apos;Approved&apos;)</errorConditionFormula>
        <errorMessage>Contract Number and Area Code must be inputted when contract status set to Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_CheckStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_CRM_Start_Date__c &gt; ASI_CRM_End_Date__c</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Start_Date__c</errorDisplayField>
        <errorMessage>Start date should be smaller than end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_Outlet_Must_Has_ServicePack</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(ASI_CRM_Outlet_WS__r.ASI_CRM_Service_Pack__c),
RecordType.DeveloperName = &apos;ASI_CRM_VN_Contract&apos;
)</errorConditionFormula>
        <errorMessage>Cannot create MCF when outlet does not have service pack.</errorMessage>
    </validationRules>
</CustomObject>